# moonblokz-storage

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  run_tests.sh
.github/workflows/: rust.yml
docs/: add-new-device-support.md  architecture.md  prd.md  release-process.md
docs/moonblokz_storage_bmad_output/brainstorming/: brainstorming-session-2026-02-21-081124.md
docs/moonblokz_storage_bmad_output/implementation-artifacts/: 1-1-create-immutable-block-and-blockbuilder-in-moonblokz-chain-types.md  1-1-set-up-initial-projects-from-starter-template.md  1-2-define-chain-types-serialization-and-hash-boundary-contracts.md  1-2-implement-immutable-block-representation-contract.md  1-3-define-no-std-synchronous-storage-trait-and-core-error-model.md  1-3-implement-canonical-sha-256-hash-utility.md  1-4-enforce-backend-feature-exclusivity-and-backend-module-isolation.md  2-1-implement-in-memory-backend-lifecycle-and-capacity-reporting.md  2-1-initialize-storage-crate-with-feature-exclusivity-guards.md  2-2-define-public-storage-trait-and-error-contract.md  2-2-implement-deterministic-storage-index-mapping-and-boundary-checks.md  2-3-implement-in-memory-backend-for-indexed-block-io.md  2-3-implement-save-and-retrieve-flows-with-slot-state-outcomes.md  2-4-implement-control-plane-init-and-load-apis-in-memory-backend.md  2-4-implement-startup-reconstruction-read-cycle-support-apis.md  2-5-add-ingest-query-integration-tests-on-memory-backend.md  2-5-implement-set-once-chain-configuration-semantics.md  2-6-implement-integrity-verification-and-invalid-data-rejection.md  2-7-implement-backend-conformance-test-suite.md  2-8-add-backend-matrix-test-runner.md  3-1-implement-rp2040-backend-skeleton-and-flash-integration.md  3-1-implement-rp2040-flash-geometry-mapping-for-block-slots.md  3-2-implement-deterministic-rp2040-slot-mapping.md  3-2-implement-synchronous-rp2040-save-path-by-storage-index.md  3-3-implement-rp2040-control-plane-replication-and-crc-recovery.md  3-3-implement-rp2040-retrieve-path-with-mandatory-hash-verification.md  3-4-implement-detection-and-explicit-errors-for-partial-invalid-writes.md  3-5-add-rp2040-integration-tests-for-startup-ingest-query-flows.md  4-1-implement-backend-conformance-test-modules.md  4-2-implement-backend-matrix-test-runner-and-ci-workflow.md  4-3-prepare-integration-distribution-metadata-for-git-and-crates-io-paths.md  4-4-complete-mandatory-api-and-source-documentation-coverage.md  4-5-write-add-new-device-support-guide-with-backend-implementation-checklist.md  epic-1-retrospective.md  epic-2-retrospective.md  epic-3-retrospective.md  epic-4-retrospective.md  sprint-status.yaml
docs/moonblokz_storage_bmad_output/planning-artifacts/: epics.md  implementation-readiness-report-2026-02-25.md  implementation-readiness-report-2026-02-28.md  prd-increment-2026-02-28-01.md  product-brief-moonblokz-2026-02-22.md  validation-report-20260228-084513.md  validation-report-20260228-085610.md
examples/moonblokz-storage-embedded-example/: Cargo.toml  build.rs  memory.x
examples/moonblokz-storage-embedded-example/.cargo/: config.toml
examples/moonblokz-storage-embedded-example/src/: main.rs
examples/moonblokz-storage-std-example/: Cargo.toml
examples/moonblokz-storage-std-example/src/: main.rs
scripts/: check_backend_features.sh  run_backend_matrix.sh
src/: backend_memory.rs  backend_rp2040.rs  conformance.rs  error.rs  lib.rs  types.rs
