[package]
name = "moonblokz-storage"
version = "0.1.0"
edition = "2024"

[features]
default = ["backend-memory"]
backend-memory = []
backend-rp2040 = []

[dependencies]
moonblokz-chain-types = { path = "../moonblokz-chain-types" }

[target.'cfg(target_arch = "arm")'.dependencies]
embassy-rp = { version = "0.8", features = ["unstable-pac", "critical-section-impl", "rp2040"] }
