[package]
name = "moonblokz-storage"
version = "0.1.0"
edition = "2024"
description = "MoonBlokz no_std storage contract and backend implementations for embedded blockchain nodes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/petersallai/moonblokz-storage"
keywords = ["embedded", "no-std", "blockchain", "rp2040", "storage"]
categories = ["embedded", "no-std"]

[features]
default = ["backend-memory"]
backend-memory = []
backend-rp2040 = []

[dependencies]
moonblokz-chain-types = { path = "../moonblokz-chain-types" }
moonblokz-crypto = { path = "../moonblokz-crypto-lib" }

[target.'cfg(target_arch = "arm")'.dependencies]
embassy-rp = { version = "0.8", features = ["unstable-pac", "critical-section-impl", "rp2040"] }
