[package]
name = "moonblokz-storage-embedded-example"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moonblokz-storage-embedded-example"
path = "src/main.rs"
test = false
bench = false
doc = false

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"
embassy-rp = { version = "0.8", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embedded-alloc = "0.6"
moonblokz-storage = { path = "../../", default-features = false, features = ["backend-rp2040"] }
moonblokz-chain-types = { path = "../../../moonblokz-chain-types" }
moonblokz-crypto = { path = "../../../moonblokz-crypto-lib", default-features = false, features = ["bls-bls12_381-bls"] }

[profile.release]
lto = true
opt-level = "z"
incremental = false
codegen-units = 1
debug = true
panic = "abort"

[profile.dev]
lto = true
opt-level = "z"
incremental = false
codegen-units = 1
debug = true
panic = "abort"
